--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "chart.js": "^4.4.7",
+    "classnames": "^2.5.1",
     "framer-motion": "^12.0.5",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.1.3"
   },
   "devDependencies": {
