--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.2.0",
+    "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.3.3",
     "chart.js": "^4.4.7",
     "classnames": "^2.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "framer-motion": "^12.0.5",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.9.6",
     "mysql": "^2.18.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
